[gd_scene load_steps=31 format=2]

[ext_resource path="res://manager/interface/InterfaceSidgridaManager.gd" type="Script" id=1]
[ext_resource path="res://avatar/norse/sigrdrifa/img/idle/Sigrdrifa_idle_1.png" type="Texture" id=2]
[ext_resource path="res://avatar/norse/sigrdrifa/img/idle/Sigrdrifa_idle_2.png" type="Texture" id=3]
[ext_resource path="res://avatar/norse/sigrdrifa/img/idle/Sigrdrifa_idle_3.png" type="Texture" id=4]
[ext_resource path="res://avatar/norse/sigrdrifa/img/idle/Sigrdrifa_idle_4.png" type="Texture" id=5]
[ext_resource path="res://avatar/norse/sigrdrifa/img/idle/Sigrdrifa_idle_5.png" type="Texture" id=6]
[ext_resource path="res://avatar/norse/sigrdrifa/img/idle/Sigrdrifa_idle_6.png" type="Texture" id=7]
[ext_resource path="res://avatar/norse/sigrdrifa/img/idle/Sigrdrifa_idle_7.png" type="Texture" id=8]
[ext_resource path="res://avatar/norse/sigrdrifa/img/idle/Sigrdrifa_idle_8.png" type="Texture" id=9]
[ext_resource path="res://avatar/norse/sigrdrifa/img/atack/Sigrdrifa_atack_0.png" type="Texture" id=10]
[ext_resource path="res://avatar/norse/sigrdrifa/img/atack/Sigrdrifa_atack_1.png" type="Texture" id=11]
[ext_resource path="res://avatar/norse/sigrdrifa/img/atack/Sigrdrifa_atack_2.png" type="Texture" id=12]
[ext_resource path="res://avatar/norse/sigrdrifa/img/atack/Sigrdrifa_atack_3.png" type="Texture" id=13]
[ext_resource path="res://avatar/norse/sigrdrifa/img/atack/Sigrdrifa_atack_4.png" type="Texture" id=14]
[ext_resource path="res://avatar/norse/sigrdrifa/img/atack/Sigrdrifa_atack_5.png" type="Texture" id=15]
[ext_resource path="res://avatar/norse/sigrdrifa/img/atack/Sigrdrifa_atack_6.png" type="Texture" id=16]
[ext_resource path="res://avatar/norse/sigrdrifa/img/atack/Sigrdrifa_atack_7.png" type="Texture" id=17]
[ext_resource path="res://avatar/norse/sigrdrifa/img/speak/Sigrdrifa_Speak_0.png" type="Texture" id=18]
[ext_resource path="res://avatar/norse/sigrdrifa/img/speak/Sigrdrifa_Speak_1.png" type="Texture" id=19]
[ext_resource path="res://avatar/norse/sigrdrifa/img/speak/Sigrdrifa_Speak_2.png" type="Texture" id=20]
[ext_resource path="res://avatar/norse/sigrdrifa/img/speak/Sigrdrifa_Speak_3.png" type="Texture" id=21]
[ext_resource path="res://avatar/norse/sigrdrifa/img/speak/Sigrdrifa_Speak_4.png" type="Texture" id=22]
[ext_resource path="res://avatar/norse/sigrdrifa/img/speak/Sigrdrifa_Speak_5.png" type="Texture" id=23]
[ext_resource path="res://avatar/norse/sigrdrifa/img/speak/Sigrdrifa_Speak_6.png" type="Texture" id=24]
[ext_resource path="res://avatar/norse/sigrdrifa/img/speak/Sigrdrifa_Speak_7.png" type="Texture" id=25]
[ext_resource path="res://avatar/norse/sigrdrifa/img/speak/Sigrdrifa_Speak_8.png" type="Texture" id=26]
[ext_resource path="res://interface/norse/img/dialogbox.png" type="Texture" id=27]
[ext_resource path="res://interface/norse/font/Norse.otf" type="DynamicFontData" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 4.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "atack",
"speed": 4.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "speak",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 23
outline_size = 1
outline_color = Color( 0.223529, 0.211765, 0.027451, 1 )
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 28 )

[node name="Sidgrida" type="Node2D"]
script = ExtResource( 1 )
show_tips = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.10956, 0 )
frames = SubResource( 1 )
speed_scale = 2.0
centered = false

[node name="SelectedManager" type="Control" parent="."]
margin_left = 101.0
margin_top = 158.0
margin_right = 197.0
margin_bottom = 504.0

[node name="TextureRect" type="NinePatchRect" parent="."]
visible = false
margin_left = 181.051
margin_top = 79.0232
margin_right = 406.051
margin_bottom = 179.023
texture = ExtResource( 27 )

[node name="Label" type="Label" parent="TextureRect"]
margin_left = 6.4319
margin_top = 6.90583
margin_right = 216.432
margin_bottom = 62.9058
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
text = "KEY_TUTORIAL_00_1 KEY_TUTORIAL_00_1"
align = 1
autowrap = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="mouse_entered" from="SelectedManager" to="." method="_on_SelectedManager_mouse_entered"]
[connection signal="mouse_exited" from="SelectedManager" to="." method="_on_SelectedManager_mouse_exited"]
